fixing some bugs

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 <body>
   <main>
 
-    <!--
-      - #SIDEBAR
-    -->
+    <!-- SIDEBAR -->
 
     <aside class="sidebar" data-sidebar>
 
@@ -135,19 +133,10 @@
 
     </aside>
 
-
-
-
-
-    <!--
-      - #main-content
-    -->
-
+    <!-- MAIN CONTENT -->
     <div class="main-content">
 
-      <!--
-        - #NAVBAR
-      -->
+      <!-- NAVBAR -->
 
       <nav class="navbar">
 
@@ -160,11 +149,6 @@
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Resume</button>
           </li>
-          <!--
-          <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Portfolio</button>
-          </li>
-          -->
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
           </li>
@@ -173,14 +157,7 @@
 
       </nav>
 
-
-
-
-
-      <!--
-        - #ABOUT
-      -->
-
+      <!-- ABOUT -->
       <article class="about  active" data-page="about">
 
         <header>
@@ -196,10 +173,7 @@
         </section>
 
 
-        <!--
-          - service
-        -->
-
+        <!-- SERVICE -->
         <section class="service">
 
           <h3 class="h3 service-title">What i'm doing</h3>
@@ -276,10 +250,7 @@
         </section>
 
 
-        <!--
-          - testimonials
-        -->
-
+        <!-- TESTIMONIALS -->
         <section class="testimonials">
 
           <h3 class="h3 testimonials-title">Testimonials</h3>
@@ -290,18 +261,14 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-1.png" alt="Daniel lewis" width="60" data-testimonials-avatar>
+                  <img src="./assets/images/avatar-1.png" alt="Budi Santoso" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Daniel lewis</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Budi Santoso</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                    Anisa sangat profesional dan ramah. Dia selalu siap membantu dan memberikan pelayanan yang luar biasa. Saya sangat terkesan dengan kemampuannya dalam berinteraksi dengan pelanggan.
                   </p>
                 </div>
 
@@ -312,18 +279,14 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-2.png" alt="Jessica miller" width="60" data-testimonials-avatar>
+                  <img src="./assets/images/avatar-2.png" alt="Dewi Ayu" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Jessica miller</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Dewi Ayu</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                    Kerja tim Anisa sangat efektif. Dia selalu memastikan semua pesanan diproses dengan cepat dan akurat. Dia juga sangat membantu dalam menjawab pertanyaan pelanggan.
                   </p>
                 </div>
 
@@ -334,18 +297,14 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-3.png" alt="Emily evans" width="60" data-testimonials-avatar>
+                  <img src="./assets/images/avatar-3.png" alt="Citra Lestari" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Emily evans</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Citra Lestari</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                    Anisa sangat teliti dan terorganisir. Dia selalu memastikan semua tugas administrasi diselesaikan dengan baik. Dia juga sangat responsif terhadap permintaan.
                   </p>
                 </div>
 
@@ -356,18 +315,14 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-4.png" alt="Henry william" width="60" data-testimonials-avatar>
+                  <img src="./assets/images/avatar-4.png" alt="Joko Wijaya" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Henry william</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Joko Wijaya</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                    Anisa memiliki kemampuan komunikasi yang sangat baik. Dia selalu memastikan semua pelanggan merasa disambut dan dilayani dengan baik. Dia juga sangat membantu dalam memberikan rekomendasi.
                   </p>
                 </div>
 
@@ -379,10 +334,7 @@
         </section>
 
 
-        <!--
-          - testimonials modal
-        -->
-
+        <!-- TESTIMONIALS MODAL -->
         <div class="modal-container" data-modal-container>
 
           <div class="overlay" data-overlay></div>
@@ -426,10 +378,7 @@
       </article>
 
 
-      <!--
-        - #RESUME
-      -->
-
+      <!-- RESUME -->
       <article class="resume" data-page="resume">
 
         <header>
@@ -460,9 +409,9 @@
                 exceptur.
               </p>
             
-          <!--
+          
             </li>
-
+<!--
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">New york academy of art</h4>
@@ -513,7 +462,7 @@
               <span>Nov 2024 — Mar 2025</span>
 
               <p class="timeline-text">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem qui ea corporis ratione quod delectus ducimus vel, cumque fugit quidem dignissimos, quas perferendis, officiis quae adipisci provident enim sequi porro?
+                Greet guests in a friendly and professional manner, provide information about the restaurant's facilities, programs, and services, address and escalate complaints, make reservations for guests and handle special requests, provide assistance to guests and help upsell products, and gather feedback and comments from guests about their experiences.
               </p>
 
             </li>
@@ -525,7 +474,7 @@
               <span>June 2024 — Oct 2024</span>
 
               <p class="timeline-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas debitis veritatis repudiandae maiores saepe laborum eos magni, error quos repellendus qui aperiam odio officia ut voluptatum amet quod illo molestiae!
+                Welcome customers in a warm and friendly manner, provide them with drink menus, answer their questions, and process customer orders and requests.
               </p>
 
             </li>
@@ -537,7 +486,7 @@
               <span>May 2023 — May 2024</span>
 
               <p class="timeline-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda itaque deserunt accusamus quasi ipsam culpa dolor magnam repudiandae odio sequi ea molestias distinctio, unde esse rem sint, amet quas iste.
+                Welcome customers in a warm and friendly manner, provide them with drink menus, answer their questions, and process customer orders and requests.
               </p>
 
             </li>
@@ -549,7 +498,7 @@
               <span>Oct 2021 — Dec 2021</span>
 
               <p class="timeline-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda itaque deserunt accusamus quasi ipsam culpa dolor magnam repudiandae odio sequi ea molestias distinctio, unde esse rem sint, amet quas iste.
+                Answering incoming calls, taking messages, and redirecting calls as required. Dealing with email inquiries, managing the diary, arranging appointments, and booking meeting rooms and conference facilities.
               </p>
 
             </li>
@@ -620,241 +569,6 @@
 
         </section>
 
-      </article>
-
-      <!--
-        - #PORTFOLIO
-    -->
-
-      <article class="portfolio" data-page="portfolio">
-
-        <header>
-          <h2 class="h2 article-title">Portfolio</h2>
-        </header>
-
-        <section class="projects">
-
-          <ul class="filter-list">
-
-            <li class="filter-item">
-              <button class="active" data-filter-btn>All</button>
-            </li>
-
-            <li class="filter-item">
-              <button data-filter-btn>Web design</button>
-            </li>
-
-            <li class="filter-item">
-              <button data-filter-btn>Applications</button>
-            </li>
-
-            <li class="filter-item">
-              <button data-filter-btn>Web development</button>
-            </li>
-
-          </ul>
-
-          <div class="filter-select-box">
-
-            <button class="filter-select" data-select>
-
-              <div class="select-value" data-selecct-value>Select category</div>
-
-              <div class="select-icon">
-                <ion-icon name="chevron-down"></ion-icon>
-              </div>
-
-            </button>
-
-            <ul class="select-list">
-
-              <li class="select-item">
-                <button data-select-item>All</button>
-              </li>
-
-              <li class="select-item">
-                <button data-select-item>Web design</button>
-              </li>
-
-              <li class="select-item">
-                <button data-select-item>Applications</button>
-              </li>
-
-              <li class="select-item">
-                <button data-select-item>Web development</button>
-              </li>
-
-            </ul>
-
-          </div>
-
-          <ul class="project-list">
-
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Finance</h3>
-
-                <p class="project-category">Web development</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Orizon</h3>
-
-                <p class="project-category">Web development</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Fundo</h3>
-
-                <p class="project-category">Web design</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Brawlhalla</h3>
-
-                <p class="project-category">Applications</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
-                </figure>
-
-                <h3 class="project-title">DSM.</h3>
-
-                <p class="project-category">Web design</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">MetaSpark</h3>
-
-                <p class="project-category">Web design</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-7.png" alt="summary" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Summary</h3>
-
-                <p class="project-category">Web development</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-8.jpg" alt="task manager" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Task Manager</h3>
-
-                <p class="project-category">Applications</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-9.png" alt="arrival" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Arrival</h3>
-
-                <p class="project-category">Web development</p>
-
-              </a>
-            </li>
-
-          </ul>
-
-        </section>
       </article>
 
       <!-- CONTACT -->
