--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="info-content">
           <h1 class="name" title="Anisa Tri Lestari">Anisa Tri Lestari</h1>
 
-          <p class="title">Web developer</p>
+          <p class="title">GUEST RELATION OFFICER</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -399,7 +399,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Universitas Pamulang</h4>
+              <h4 class="h4 timeline-item-title">INSTITU TEKNOLOGI ADHI TAMA SURABAYA</h4>
 
               <span>2023 — PRESENT</span>
 
@@ -438,9 +438,9 @@
               </p>
 
             </li>
-
-          </ol>
 -->
+          </ol>
+
         </section>
 
         <section class="timeline">
