fixing more bugs

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">INSTITU TEKNOLOGI ADHI TAMA SURABAYA</h4>
+              <h4 class="h4 timeline-item-title">INSTITUT TEKNOLOGI ADHI TAMA SURABAYA</h4>
 
               <span>2023 — PRESENT</span>
 
@@ -466,7 +466,7 @@
               </p>
 
             </li>
-
+<!--
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">ISMAYA GROUP (SKYE) - FLOOR CAPTAIN</h4>
@@ -490,7 +490,7 @@
               </p>
 
             </li>
-
+-->
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">PT. PANCA MITRA MAKMUR - ADMIN</h4>
@@ -516,33 +516,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
-                <data value="80">80%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
-                <data value="70">70%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
+                <h5 class="h5">Table Check</h5>
                 <data value="90">90%</data>
               </div>
 
@@ -555,7 +529,46 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
+                <h5 class="h5">Powerpoint</h5>
+                <data value="85">85%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 85%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Word</h5>
+                <data value="80">80%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 80%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Canva</h5>
+                <data value="70">70%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 70%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Excel</h5>
                 <data value="50">50%</data>
               </div>
 
