puting cv download button

--- a/index.html
+++ b/index.html
@@ -582,6 +582,12 @@
 
         </section>
 
+        <section class="download-cv">
+          <a href="./assets/pdf/ANISA TRI L CV.pdf" class="download-cv-btn" download>
+            Download CV
+          </a>
+        </section>
+
       </article>
 
       <!-- CONTACT -->
